--- a/package.json
+++ b/package.json
@@ -13,12 +13,17 @@
     "@chakra-ui/react": "^2.6.1",
     "@emotion/react": "^11.11.0",
     "@emotion/styled": "^11.11.0",
+    "@hookform/resolvers": "^3.1.0",
+    "axios": "^1.4.0",
     "framer-motion": "^10.12.12",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.9",
     "react-icons": "^4.8.0",
+    "react-input-mask": "^2.0.4",
     "react-router-dom": "^6.11.2",
-    "vercel": "^29.3.6"
+    "vercel": "^29.3.6",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
